--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     <artifactId>webdrivermanager</artifactId>
     <version>3.8.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.0.1</version>
+</dependency>
+
   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
@@ -41,7 +48,7 @@
     <version>3.0.0-M5</version>
     <configuration>
     <suiteXmlFiles>
-    <suiteXmlFile>{XmlFiles}</suiteXmlFile>
+    <suiteXmlFile>${XmlFiles}</suiteXmlFile>
     </suiteXmlFiles>
     <systemPropertiesVariables>
     <exectionBrowser>${browser}</exectionBrowser>
